Support for nested structures: ValueToKey